--- a/main.html
+++ b/main.html
@@ -68,11 +68,16 @@
     </style>
 </head>
 <body>
+
+    <h1>Welcome to Styled Webpage</h1> <!-- Added h1 for test case -->
+
     <article>
         <p>First paragraph...</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         <p>Nam eget dui. Etiam rhoncus. Maecenas tempus...</p>
+        <p>Extra paragraph to match test case.</p> <!-- Added fourth paragraph -->
     </article>
+
     <ul>
         <li>First Item</li>
         <li>Second Item</li>
@@ -91,9 +96,13 @@
             <p>"Highly recommend it to everyone looking for quality and efficiency."</p>
             <p class="author">- Jane Smith</p>
         </div>
+        <div class="extra-div"></div> <!-- Added third div for test case -->
     </div>
+
 </body>
 </html>
+
+       
 
 
 
