--- a/main.html
+++ b/main.html
@@ -60,6 +60,13 @@
             margin-bottom: 10px;
         }
 
+        .extra-div {
+            padding: 15px;
+            border: 1px solid #ccc;
+            background-color: white;
+            margin-bottom: 10px;
+        }
+
         .author {
             text-align: right;
             font-style: italic;
@@ -68,16 +75,13 @@
     </style>
 </head>
 <body>
-
-    <h1>Welcome to Styled Webpage</h1> <!-- Added h1 for test case -->
-
+    <h1>Styled Webpage</h1>
     <article>
         <p>First paragraph...</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>Nullam dictum felis eu pede mollis pretium...</p>
         <p>Nam eget dui. Etiam rhoncus. Maecenas tempus...</p>
-        <p>Extra paragraph to match test case.</p> <!-- Added fourth paragraph -->
     </article>
-
     <ul>
         <li>First Item</li>
         <li>Second Item</li>
@@ -96,11 +100,16 @@
             <p>"Highly recommend it to everyone looking for quality and efficiency."</p>
             <p class="author">- Jane Smith</p>
         </div>
-        <div class="extra-div"></div> <!-- Added third div for test case -->
+        <div class="extra-div">
+            <p>"Fantastic experience! Will use this again for sure."</p>
+            <p class="author">- Mark Wilson</p>
+        </div>
     </div>
-
 </body>
 </html>
+
+
+            
 
        
 
