--- a/main.html
+++ b/main.html
@@ -60,13 +60,6 @@
             margin-bottom: 10px;
         }
 
-        .extra-div {
-            padding: 15px;
-            border: 1px solid #ccc;
-            background-color: white;
-            margin-bottom: 10px;
-        }
-
         .author {
             text-align: right;
             font-style: italic;
@@ -100,13 +93,15 @@
             <p>"Highly recommend it to everyone looking for quality and efficiency."</p>
             <p class="author">- Jane Smith</p>
         </div>
-        <div class="extra-div">
+        <div class="testimonial">
             <p>"Fantastic experience! Will use this again for sure."</p>
             <p class="author">- Mark Wilson</p>
         </div>
     </div>
 </body>
 </html>
+
+
 
 
             
