--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
         }
 
         /* Testimonial Section Styling */
-        .testimonial-container {
+        section.testimonial-container {
             padding: 20px;
             background-color: #f5f5f5;
             margin-top: 20px;
@@ -84,7 +84,7 @@
     </ul>
     
     <!-- Testimonial Section -->
-    <div class="testimonial-container">
+    <section class="testimonial-container">
         <div class="testimonial">
             <p>"This is an amazing product! It has helped me so much in my daily work."</p>
             <p class="author">- John Doe</p>
@@ -97,6 +97,6 @@
             <p>"Fantastic experience! Will use this again for sure."</p>
             <p class="author">- Mark Wilson</p>
         </div>
-    </div>
+    </section>
 </body>
 </html>
